# PSU-CIDD-Malaria-Simulation

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  pipeline_build.sh
src/: CMakeLists.txt  Model.cpp  Model.h
src/Core/: MultinomialDistributionGenerator.h  PropertyMacro.h  Random.cpp  Random.h  Scheduler.cpp  Scheduler.h  TypeDef.h
src/Core/Config/: Config.cpp  Config.h  ConfigItem.h  CustomConfigItem.cpp  CustomConfigItem.h
src/Core/YAML/: YamlConverter.h
src/DxGGenerator/: AppInput.h  CMakeLists.txt  DxGGenerator_main.cpp  PkPdReporter.cpp  PkPdReporter.h
src/EfficacyEstimator/: AppInput.h  CMakeLists.txt  main.cpp
src/Environment/: SeasonalEquation.cpp  SeasonalInfo.h
src/Events/: ProgressToClinicalEvent.cpp  UpdateWhenDrugIsPresentEvent.cpp
src/Events/Population/: ChangeMutationProbabilityByLocusEvent.cpp  ChangeMutationProbabilityByLocusEvent.h  ChangeWithinHostInducedFreeRecombinationEvent.cpp  ChangeWithinHostInducedFreeRecombinationEvent.h  Introduce580YMutantEvent.h  PopulationEventBuilder.cpp  PopulationEventBuilder.h
src/GIS/: SpatialData.cpp  SpatialData.h
src/Gpu/: Random.cu  Random.cuh  RenderEntity.cu  Utils.cu  Utils.cuh
src/Gpu/Core/: Dispatcher.cu  Dispatcher.cuh  Gaussian.cuh  Random.cu  Random.cuh  Scheduler.cu  Scheduler.cuh
src/Gpu/Events/: BirthdayEvent.cu  BirthdayEvent.cuh  CirculateToTargetLocationNextDayEvent.cu  CirculateToTargetLocationNextDayEvent.cuh  EndClinicalByNoTreatmentEvent.cu  EndClinicalByNoTreatmentEvent.cuh  EndClinicalDueToDrugResistanceEvent.cu  EndClinicalDueToDrugResistanceEvent.cuh  EndClinicalEvent.cu  EndClinicalEvent.cuh  Event.cu  Event.cuh  MatureGametocyteEvent.cu  MatureGametocyteEvent.cuh  MoveParasiteToBloodEvent.cu  MoveParasiteToBloodEvent.cuh  ProgressToClinicalEvent.cu  ProgressToClinicalEvent.cuh  ReceiveMDATherapyEvent.cu  ReceiveMDATherapyEvent.cuh  ReceiveTherapyEvent.cu  ReceiveTherapyEvent.cuh  ReturnToResidenceEvent.cu  ReturnToResidenceEvent.cuh  SwitchImmuneComponentEvent.cu  SwitchImmuneComponentEvent.cuh  TestTreatmentFailureEvent.cu  TestTreatmentFailureEvent.cuh  UpdateWhenDrugIsPresentEvent.cu  UpdateWhenDrugIsPresentEvent.cuh
src/Gpu/Events/Population/: ChangeInterruptedFeedingRateEvent.cu  ChangeInterruptedFeedingRateEvent.cuh  ChangeMutationProbabilityByLocusEvent.cu  ChangeMutationProbabilityByLocusEvent.cuh  ChangeStrategyEvent.cu  ChangeStrategyEvent.cuh  ChangeTreatmentCoverageEvent.cu  (+37 more)
src/Gpu/MDC/: ModelDataCollector.cu  ModelDataCollector.cuh
src/Gpu/Mosquito/: Mosquito.cu  Mosquito.cuh
src/Gpu/Parasites/: Genotype.cu  Genotype.cuh  GenotypeDatabase.cu  GenotypeDatabase.cuh
src/Gpu/Population/: ClinicalUpdateFunction.cu  ClinicalUpdateFunction.cuh  ClonalParasitePopulation.cu  ClonalParasitePopulation.cuh  DrugsInBlood.cu  DrugsInBlood.cuh  ImmuneComponent.cu  ImmuneComponent.cuh  ImmuneSystem.cu  ImmuneSystem.cuh  ImmunityClearanceUpdateFunction.cu  ImmunityClearanceUpdateFunction.cuh  InfantImmuneComponent.cu  InfantImmuneComponent.cuh  NonInfantImmuneComponent.cu  NonInfantImmuneComponent.cuh  ParasiteDensityUpdateFunction.cu  ParasiteDensityUpdateFunction.cuh  Person.cu  Person.cuh  Population.cu  Population.cuh  PopulationKernel.cu  PopulationKernel.cuh  SingleHostClonalParasitePopulations.cu  SingleHostClonalParasitePopulations.cuh
src/Gpu/Renderer/: RenderEntity.cu  RenderEntity.cuh  Renderer.cpp  Renderer.cu  Renderer.cuh  Renderer.h
src/Gpu/Reporters/: ConsoleReporter.cu  ConsoleReporter.cuh  MMCReporter.cu  MMCReporter.cuh  MonthlyReporter.cu  MonthlyReporter.cuh  NovelDrugReporter.cu  NovelDrugReporter.cuh  Reporter.cu  Reporter.cuh  ReporterUtils.cu  ReporterUtils.cuh  TACTReporter.cu  TACTReporter.cuh  ValidationReporter.cu  ValidationReporter.cuh
src/Gpu/Strategies/: AdaptiveCyclingStrategy.cu  AdaptiveCyclingStrategy.cuh  CyclingStrategy.cu  CyclingStrategy.cuh  IStrategy.cu  IStrategy.cuh  MFTMultiLocationStrategy.cu  MFTMultiLocationStrategy.cuh  MFTRebalancingStrategy.cu  MFTRebalancingStrategy.cuh  MFTStrategy.cu  MFTStrategy.cuh  NestedMFTMultiLocationStrategy.cu  NestedMFTMultiLocationStrategy.cuh  NestedMFTStrategy.cu  NestedMFTStrategy.cuh  NovelDrugIntroductionStrategy.cu  NovelDrugIntroductionStrategy.cuh  SFTStrategy.cu  SFTStrategy.cuh  StrategyBuilder.cu  StrategyBuilder.cuh
src/Gpu/Therapies/: Drug.cu  Drug.cuh  DrugDatabase.cu  DrugDatabase.cuh  DrugType.cu  DrugType.cuh  MACTherapy.cu  MACTherapy.cuh  SCTherapy.cu  SCTherapy.cuh  Therapy.cu  Therapy.cuh  TherapyBuilder.cu  TherapyBuilder.cuh
src/Gpu/Utils/: Utils.cu  Utils.cuh
src/Helpers/: Shader.h  UniqueId.hxx
src/MDC/: ModelDataCollector.cpp  ModelDataCollector.h
src/MaSim/: main.cpp
src/Mosquito/: Mosquito.cpp  Mosquito.h
src/Parasites/: Genotype.cpp  Genotype.h  GenotypeDatabase.cpp  GenotypeDatabase.h
src/Population/: ClinicalUpdateFunction.cpp  ClonalParasitePopulation.cpp  ImmuneSystem.cpp  ImmunityClearanceUpdateFunction.cpp  Person.cpp  Person.h  Population.cpp  Population.h  SingleHostClonalParasitePopulations.cpp  SingleHostClonalParasitePopulations.h
src/Population/Properties/: IndexHandler.h  PersonIndex.h  PersonIndexByLocationMovingLevel.cpp  PersonIndexByLocationMovingLevel.h  PersonIndexByLocationStateAgeClass.cpp  PersonIndexByLocationStateAgeClass.h
src/Reporters/: MMCReporter.cpp  MonthlyReporter.cpp  MonthlyReporter.h  Reporter.cpp  ReporterUtils.cpp  ReporterUtils.h  ValidationReporter.cpp  ValidationReporter.h
src/Spatial/: BurkinaFaso.hxx  Coordinate.cpp  Location.cpp  Location.h  Marshall.hxx  SpatialModel.hxx  WesolowskiSM.hxx
src/Strategies/: AdaptiveCyclingStrategy.cpp  MFTRebalancingStrategy.cpp
src/Therapies/: Drug.cpp  Drug.h
test/: CMakeLists.txt  MockRandom.h
test/Core/: ConfigTest.cpp
test/Core/Config/: ReadGPUConfigTest.cpp
test/GPU/Random/: GPUMultinomialTest.cpp  GPURouletteTest.cpp
test/GPU/Utils/: GPUUtilsTest.cpp  GPUUtilsTest.cu
test/Mosquito/: MosquitoTest.cpp
test/Parasites/: GenotypeOverrideEC50Test.cpp  GenotypePerformMutationTest.cpp  GenotypeTest.cpp
test/test_data/: input.yml
(+942 files in other folders)
