find_package(CLI11 CONFIG REQUIRED)
set(EfficacyEstimator_SRC_FILES main.cpp PkPdReporter.cpp PkPdReporter.h)

if (MSVC)
    if(CMAKE_BUILD_TYPE STREQUAL "Debug")
        add_definitions(-D_ITERATOR_DEBUG_LEVEL=2)
    else()
        add_definitions(-D_ITERATOR_DEBUG_LEVEL=0)
    endif()
endif ()

if(WIN32)
    message(STATUS "Build in Windows")
    target_include_directories(MaSimCore PUBLIC "D:/SDK/vcpkg/installed/x64-windows/include")
    target_link_directories(MaSimCore PUBLIC "D:/SDK/vcpkg/installed/x64-windows/lib")
elseif(UNIX)
    if(DOCKER)
        message(STATUS "Build in Docker")
        target_include_directories(MaSimCore PUBLIC "/root/vcpkg/installed/x64-linux/include")
        target_link_directories(MaSimCore PUBLIC "/root/vcpkg/installed/x64-linux/lib")
    elseif(WSL)
        message(STATUS "Build in WSL")
        target_include_directories(MaSimCore PUBLIC "/mnt/d/SDK/vcpkg/installed/x64-linux/include")
        target_link_directories(MaSimCore PUBLIC "/mnt/d/SDK/vcpkg/installed/x64-linux/lib")
    else()
        message(STATUS "Build in Linux")
        target_include_directories(MaSimCore PUBLIC "/home/ktt/SDK/vcpkg/installed/x64-linux/include")
        target_link_directories(MaSimCore PUBLIC "/home/ktt/SDK/vcpkg/installed/x64-linux/lib")
    endif()
endif()

add_executable(EfficacyEstimator ${EfficacyEstimator_SRC_FILES})
add_dependencies(EfficacyEstimator MaSimCore)
target_link_libraries(EfficacyEstimator PRIVATE MaSimCore CLI11::CLI11)
target_compile_features(EfficacyEstimator PRIVATE cxx_range_for)
